# deribit-websocket

./: .env.example  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  codecov.yml
.github/workflows/: build.yml  code_coverage.yml  format_check.yml  lint.yml  semver.yml  tests.yml
examples/: account_operations.rs  advanced_subscriptions.rs  basic_client.rs  callback_example.rs  cancel_on_disconnect.rs  expiration_price_subscription.rs  mark_price_subscription.rs  mass_quote_advanced.rs  mass_quote_basic.rs  mass_quote_options.rs  new_channels_subscription.rs  perpetual_subscription.rs  portfolio_subscription.rs  position_management.rs  price_index_subscription.rs  quote_subscription.rs  session_management.rs  trades_subscription.rs  trading_operations.rs  unsubscribe_all.rs  user_orders_subscription.rs  user_trades_subscription.rs
src/: callback.rs  client.rs  config.rs  constants.rs  lib.rs  messages.rs  prelude.rs  subscriptions.rs  tls.rs
src/connection/: dispatcher.rs  mod.rs  ws_connection.rs
src/error/: display.rs  envelope.rs  mod.rs  redaction.rs
src/message/: builder.rs  mod.rs  notification.rs  request.rs  response.rs
src/model/: account.rs  mod.rs  position.rs  quote.rs  subscription.rs  trading.rs  ws_types.rs
src/session/: mod.rs  ws_session.rs
src/utils/: logger.rs  mod.rs
tests/: integration.rs  lib.rs
tests/integration/: mod.rs
tests/integration/authentication/: mod.rs  oauth_flow.rs
tests/integration/connection/: basic_connection.rs  connection_recovery.rs  mod.rs  ssl_connection.rs
tests/integration/error_handling/: connection_errors.rs  mod.rs
tests/integration/market_data/: mod.rs  ticker_data.rs
tests/integration/subscriptions/: basic_subscriptions.rs  mod.rs
tests/integration_mock/: auth.rs  id_matching.rs  mod.rs  notifications.rs  reconnect.rs  subscriptions.rs  timeout.rs
tests/integration_mock/helpers/: client.rs  frames.rs  mock_server.rs  mod.rs
tests/unit/: account.rs  builder.rs  callback.rs  client.rs  config.rs  connection.rs  error.rs  message.rs  mod.rs  model.rs  notification.rs  position.rs  response.rs  session.rs  subscription_channel.rs  subscriptions.rs  subscriptions_legacy.rs  trading.rs
