[package]
name = "deribit-websocket"
version = "0.2.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "WebSocket client for Deribit trading platform real-time data"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/deribit-websocket"
homepage = "https://github.com/joaquinbejar/deribit-websocket"
keywords = ["finance", "deribit", "trading", "websocket", "realtime"]
categories = ["finance", "api-bindings", "web-programming::websocket"]

[features]
default = []
integration-tests = []


[dependencies]
deribit-base = { workspace = true }
pretty-simple-display = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }
thiserror = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
dotenv = { workspace = true }


[dev-dependencies]
serial_test = "3.4"
dotenv = "0.15"

[workspace.dependencies]
deribit-base = "0.2.6"
pretty-simple-display = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1.50", features = ["full"] }
thiserror = "2.0.18"
url = "2.4"
futures-util = "0.3"
rustls = { version = "0.23.31", features = ["aws-lc-rs"] }
dotenv = "0.15" 