[package]
name = "deribit-websocket"
version = "0.2.1"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "WebSocket client for Deribit trading platform real-time data"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/deribit-websocket"
homepage = "https://github.com/joaquinbejar/deribit-websocket"
keywords = ["finance", "deribit", "trading", "websocket", "realtime"]
categories = ["finance", "api-bindings", "web-programming::websocket"]

[features]
default = ["rustls-aws-lc"]

# Exactly one of the three TLS backends below must be active. The
# `compile_error!` mutex in `src/tls.rs` rejects any other combination
# (zero or multiple) at compile time.
#
# - `rustls-aws-lc` (default) pulls rustls with the `aws-lc-rs` crypto
#   provider and tokio-tungstenite wired to the native root store.
# - `rustls-ring` is the same but with the `ring` crypto provider,
#   useful on targets without aws-lc prebuilts (for example some musl
#   or BSD setups) or where avoiding aws-lc C/ASM dependencies is
#   required.
# - `native-tls` routes through the OS TLS stack (SChannel /
#   SecureTransport / OpenSSL) and drops the rustls dependency
#   entirely.
rustls-aws-lc = [
    "dep:rustls",
    "rustls/std",
    "rustls/tls12",
    "rustls/logging",
    "rustls/prefer-post-quantum",
    "rustls/aws-lc-rs",
    "tokio-tungstenite/rustls-tls-native-roots",
]
rustls-ring = [
    "dep:rustls",
    "rustls/std",
    "rustls/tls12",
    "rustls/logging",
    "rustls/ring",
    "tokio-tungstenite/rustls-tls-native-roots",
]
native-tls = [
    "tokio-tungstenite/native-tls",
]

# Opt-in: pulls in live Deribit-reachable integration tests that
# require real credentials.
integration-tests = []


[dependencies]
pretty-simple-display = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true, optional = true }
thiserror = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
dotenv = { workspace = true }


[dev-dependencies]
serial_test = "3.4"
dotenv = "0.15"

# All examples call `install_default_crypto_provider()` which only
# exists under the rustls backends. Gating via `required-features`
# means `cargo build --examples` under `native-tls` silently skips
# them rather than failing to compile.
[[example]]
name = "account_operations"
required-features = ["rustls-aws-lc"]

[[example]]
name = "advanced_subscriptions"
required-features = ["rustls-aws-lc"]

[[example]]
name = "basic_client"
required-features = ["rustls-aws-lc"]

[[example]]
name = "callback_example"
required-features = ["rustls-aws-lc"]

[[example]]
name = "cancel_on_disconnect"
required-features = ["rustls-aws-lc"]

[[example]]
name = "expiration_price_subscription"
required-features = ["rustls-aws-lc"]

[[example]]
name = "mark_price_subscription"
required-features = ["rustls-aws-lc"]

[[example]]
name = "mass_quote_advanced"
required-features = ["rustls-aws-lc"]

[[example]]
name = "mass_quote_basic"
required-features = ["rustls-aws-lc"]

[[example]]
name = "mass_quote_options"
required-features = ["rustls-aws-lc"]

[[example]]
name = "new_channels_subscription"
required-features = ["rustls-aws-lc"]

[[example]]
name = "perpetual_subscription"
required-features = ["rustls-aws-lc"]

[[example]]
name = "portfolio_subscription"
required-features = ["rustls-aws-lc"]

[[example]]
name = "position_management"
required-features = ["rustls-aws-lc"]

[[example]]
name = "price_index_subscription"
required-features = ["rustls-aws-lc"]

[[example]]
name = "quote_subscription"
required-features = ["rustls-aws-lc"]

[[example]]
name = "session_management"
required-features = ["rustls-aws-lc"]

[[example]]
name = "trades_subscription"
required-features = ["rustls-aws-lc"]

[[example]]
name = "trading_operations"
required-features = ["rustls-aws-lc"]

[[example]]
name = "unsubscribe_all"
required-features = ["rustls-aws-lc"]

[[example]]
name = "user_orders_subscription"
required-features = ["rustls-aws-lc"]

[[example]]
name = "user_trades_subscription"
required-features = ["rustls-aws-lc"]

[workspace.dependencies]
pretty-simple-display = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio-tungstenite = { version = "0.29" }
tokio = { version = "1.50", features = ["full"] }
thiserror = "2.0"
url = "2.5"
futures-util = "0.3"
rustls = { version = "0.23", default-features = false }
dotenv = "0.15" 